--- a/DOS-regex/views/index.ejs
+++ b/DOS-regex/views/index.ejs
@@ -68,7 +68,7 @@
 				 <div class="panel-body">
 					<div class="col-md-6">
 					   <form method="post" action="/verify_email">
-						  <label>Check email</label>     <input type="text" placeholder="email" name="email" class="form-control">
+						  <label>Insert a string to stuck the regex expression performed server-side.</label>     <input type="text" placeholder="email" name="email" class="form-control">
 						  <button class="btn btn-primary" type="submit">Verify email format</button>
 					</div>
 					</form>
