--- a/Auth-Bypass-1/views/home.ejs
+++ b/Auth-Bypass-1/views/home.ejs
@@ -66,33 +66,36 @@
     </div>
     <!--/.sidebar-->
 
-    <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
-      <div class="row"></div>
-      <!--/.row-->
-
-      <div class="row">
-        <div class="col-lg-12">
-          <h1 class="page-header">Live demonstration!</h1>
+    <form method="post" action="/update">
+      <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">			
+        <div class="row" align="right">
+          <a href='/'>Home</a>&nbsp;&nbsp;<a href='/logout'>Logout</a>&nbsp;&nbsp;&nbsp;
         </div>
-      </div>
-      <!--/.row-->
-
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">Authorization Bypass!</div>
-            <div class="panel-body">
-              <center>
-                <p style="font-size: 2em">Your API key: <%= api %></p>
-              </center>
+        <!--/.row-->
+        
+        
+        <div class="row">
+          <div class="col-lg-12">
+            <h1 class="page-header">Live demonstration!</h1>
             </div>
-          </div>
-        </div>
-        <!-- /.col-->
-      </div>
-      <!-- /.row -->
-    </div>
-    <!--/.main-->
+        </div><!--/.row-->
+            
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="panel panel-default">
+              <div class="panel-heading"><%= msg %></div>
+              <div class="panel-body">
+                <div class="col-md-6">
+                you are logged in as <B><%= username %></B>
+                         </div>
+              </div>
+            </div>
+          </div><!-- /.col-->
+        </div><!-- /.row -->
+      </form>
+         <center> <p style="font-size:2em;"></p></center>
+      
+      </div><!--/.main-->
 
     <script src="/js/jquery-1.11.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
