--- a/Auth-Bypass-1/views/index.ejs
+++ b/Auth-Bypass-1/views/index.ejs
@@ -60,27 +60,21 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="panel panel-default">
-					<div class="panel-heading">Authorization Bypass</div>
+					<div class="panel-heading">Authentication</div>
 					<div class="panel-body">
 						<div class="col-md-6">
+							<a href=/loggedin>Proceed</a> to the authenticated section or login if you're not authenticated yet:</br></br />
 							<form method="post" action="/login">
 							<input type="text" class="form-control" name="username" placeholder="username"/><br/>
-                			<input type="password" class="form-control" name="password" placeholder="password"/><br/>
-               			    <button class="btn btn-primary" type="submit">Submit Button</button>
+							<input type="password" class="form-control" name="password" placeholder="password"/><br/>
+							<p>Not a member yet ? register <a href="/register" rel="nofollow">here</a></p></br/>
+							<button class="btn btn-primary" type="submit">Submit Button</button></br>
                			</div>
 						</form>
 					</div>
 				</div>
 			</div><!-- /.col-->
 		</div><!-- /.row -->
-		
-	
-     <center>
-        <p style="font-size:2em;">  
-		    <!-- content -->
-		  </p>
-      </center>
-
 	</div><!--/.main-->
 
 	<script src="/js/jquery-1.11.1.min.js"></script>
