--- a/Auth-Bypass-1/views/loggedin.ejs
+++ b/Auth-Bypass-1/views/loggedin.ejs
@@ -7,11 +7,11 @@
 <title>Live demonstrations</title>
 
 <link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/datepicker3.css" rel="stylesheet">
 <link href="/css/styles.css" rel="stylesheet">
 
 <!--Icons-->
-<script src="/static/js/lumino.glyphs.js"></script>
-
+<script src="/js/lumino.glyphs.js"></script>
 
 </head>
 
@@ -38,48 +38,49 @@
 		
 	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
 	<br/><br/>
-		<center> 		
-			<img src="/img/logo.svg" width="60%" height="60%"/> 		<br/> 		
-			<p style="color:#515594; font-size:1.0em;"><a href="https://github.com/blabla1337/skf-flask" style="color:#515594; font-size:1.7em;">OWASP S.K.F.</a></p>  	 			<p><a href="https://gitter.im/Security-Knowledge-Framework/Lobby" rel="nofollow"> 				<img src="/img/badge.svg" alt="Join the chat at https://gitter.im/Security-Knowledge-Framework/Lobby" data-canonical-src="/img/badge.svg" style="max-width:100%;"></a> 			</p>  	
-		</center>
+			<center> 		
+				<img src="/img/logo.svg" width="60%" height="60%"/> 		<br/>
+						 <p style="color:#515594; font-size:1.0em;"><a href="https://github.com/blabla1337/skf-flask" style="color:#515594; font-size:1.7em;">OWASP S.K.F.</a></p>  	 			<p><a href="https://gitter.im/Security-Knowledge-Framework/Lobby" rel="nofollow"> 				<img src="/img/badge.svg" alt="Join the chat at https://gitter.im/Security-Knowledge-Framework/Lobby" data-canonical-src="/img/badge.svg" style="max-width:100%;"></a> 			</p>  	
+			</center>
 	</div><!--/.sidebar-->
-		
+	<form method="post" action="/update">
 	<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">			
-		<div class="row">
-
-		</div><!--/.row-->
+		<div class="row" align="right">
+			<a href='/'>Home</a>&nbsp;&nbsp;<a href='/logout'>Logout</a>&nbsp;&nbsp;&nbsp;
+		</div>
+		<!--/.row-->
+		
 		
 		<div class="row">
 			<div class="col-lg-12">
 				<h1 class="page-header">Live demonstration!</h1>
-			</div>
+				</div>
 		</div><!--/.row-->
 				
-		
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="panel panel-default">
-					<div class="panel-heading">Authorization Bypass</div>
+					<div class="panel-heading"><%= msg %></div>
 					<div class="panel-body">
 						<div class="col-md-6">
-						<p>The newly created cookie for doing the bypass</p>
-						<script>alert(document.cookie)</script>
+						you are logged in as <B><%= username %></B>
                			</div>
-						</form>
 					</div>
 				</div>
 			</div><!-- /.col-->
 		</div><!-- /.row -->
-	
-	<p style="font-size:20px;">
-
-    </p>
+	</form>
+     <center> <p style="font-size:2em;"></p></center>
 	
 	</div><!--/.main-->
 
-	<script src="/js/jquery-1.11.1.min.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/bootstrap-datepicker.js"></script>
+	<script src="/static/js/jquery-1.11.1.min.js"></script>
+	<script src="/static/js/bootstrap.min.js"></script>
+	<script src="/static/js/chart.min.js"></script>
+	<script src="/static/js/chart-data.js"></script>
+	<script src="/static/js/easypiechart.js"></script>
+	<script src="/static/js/easypiechart-data.js"></script>
+	<script src="/static/js/bootstrap-datepicker.js"></script>
 	<script>
 		!function ($) {
 			$(document).on("click","ul.nav li.parent > a > span.icon", function(){		  
@@ -98,6 +99,3 @@
 </body>
 
 </html>
-
-
-
