--- a/Auth-Bypass-1/views/register.ejs
+++ b/Auth-Bypass-1/views/register.ejs
@@ -4,15 +4,17 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Live demonstrations</title>
+<title>Register</title>
 
 <link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/datepicker3.css" rel="stylesheet">
 <link href="/css/styles.css" rel="stylesheet">
 
 <!--Icons-->
-<script src="/static/js/lumino.glyphs.js"></script>
-
-
+<script src="/js/lumino.glyphs.js"></script>
+<script>
+var renderlogout='{{renderlogout}}'
+</script>
 </head>
 
 <body>
@@ -38,20 +40,22 @@
 		
 	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
 	<br/><br/>
-		<center> 		
-			<img src="/img/logo.svg" width="60%" height="60%"/> 		<br/> 		
+    	<center> 		
+			<img src="/img/logo.svg" width="60%" height="60%"/> 		
+			<br/> 		
 			<p style="color:#515594; font-size:1.0em;"><a href="https://github.com/blabla1337/skf-flask" style="color:#515594; font-size:1.7em;">OWASP S.K.F.</a></p>  	 			<p><a href="https://gitter.im/Security-Knowledge-Framework/Lobby" rel="nofollow"> 				<img src="/img/badge.svg" alt="Join the chat at https://gitter.im/Security-Knowledge-Framework/Lobby" data-canonical-src="/img/badge.svg" style="max-width:100%;"></a> 			</p>  	
 		</center>
 	</div><!--/.sidebar-->
 		
 	<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">			
-		<div class="row">
-
-		</div><!--/.row-->
+		<div class="row" align="right">
+			<a href='/'>Home</a>&nbsp;&nbsp;<a id='logout' href='/logout'>Logout</a>&nbsp;&nbsp;&nbsp;
+		</div>
+		<!--/.row-->
 		
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">Live demonstration!</h1>
+				<h1 class="page-header">Register</h1>
 			</div>
 		</div><!--/.row-->
 				
@@ -59,27 +63,30 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="panel panel-default">
-					<div class="panel-heading">Authorization Bypass</div>
+					<div class="panel-heading">New user:</div>
 					<div class="panel-body">
 						<div class="col-md-6">
-						<p>The newly created cookie for doing the bypass</p>
-						<script>alert(document.cookie)</script>
+							<form method="post" action="/create">
+							<input type="text" class="form-control" name="username" placeholder="username"/><br/>
+							<input type="password" class="form-control" name="password" placeholder="password"/><br/>
+							<button class="btn btn-primary" type="submit">Submit Button</button>
                			</div>
 						</form>
 					</div>
 				</div>
 			</div><!-- /.col-->
 		</div><!-- /.row -->
-	
-	<p style="font-size:20px;">
+	            <%= msg %>
 
-    </p>
-	
 	</div><!--/.main-->
 
-	<script src="/js/jquery-1.11.1.min.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/bootstrap-datepicker.js"></script>
+	<script src="/static/js/jquery-1.11.1.min.js"></script>
+	<script src="/static/js/bootstrap.min.js"></script>
+	<script src="/static/js/chart.min.js"></script>
+	<script src="/static/js/chart-data.js"></script>
+	<script src="/static/js/easypiechart.js"></script>
+	<script src="/static/js/easypiechart-data.js"></script>
+	<script src="/static/js/bootstrap-datepicker.js"></script>
 	<script>
 		!function ($) {
 			$(document).on("click","ul.nav li.parent > a > span.icon", function(){		  
@@ -95,9 +102,12 @@
 		  if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
 		})
 	</script>	
+	<script>
+		if (renderlogout.toLowerCase = 'false') {
+			a=document.getElementById("logout");
+			a.style.display = "none";
+		}
+	</script>
 </body>
 
 </html>
-
-
-
