--- a/JWT-null/views/index.ejs
+++ b/JWT-null/views/index.ejs
@@ -135,7 +135,7 @@
         <!-- /.col-->
       </div>
       <!-- /.row -->
-      <center><p id="welcome" style="fone-size: 2em"></p></center>
+      <center><p id="welcome" style="font-size: 2em"></p></center>
     </div>
     <!--/.main-->
 
