--- a/CSRF-samesite/views/home.ejs
+++ b/CSRF-samesite/views/home.ejs
@@ -86,6 +86,7 @@
                 <form method="post" action="/update">
                 <input type="text" class="form-control" name="color" placeholder="favorite color"/><br/>
                            <button class="btn btn-primary" type="submit">Submit Button</button>
+                           <a style="float:right; margin-top:1%;" href="/update"> refresh the page</a><a style="float:right; margin-top:1%;margin-right:2%" href="/">home</a><br/>
                        </div>
               </form>
             </div>
