--- a/XXE/views/index.ejs
+++ b/XXE/views/index.ejs
@@ -6,9 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Live demonstrations</title>
 
-<link href="/static/css/bootstrap.min.css" rel="stylesheet">
-<link href="/static/css/datepicker3.css" rel="stylesheet">
-<link href="/static/css/styles.css" rel="stylesheet">
+<link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/datepicker3.css" rel="stylesheet">
+<link href="/css/styles.css" rel="stylesheet">
 <script src="/js/hints.js"></script>
 <!--Icons-->
 <script src="/js/lumino.glyphs.js"></script>
@@ -58,7 +58,7 @@ const attack = '<!DOCTYPE item [ <!ELEMENT item ANY ><!ENTITY xxe SYSTEM "file:/
 	<br/><br/>
 		<center> 		
 			<img src="/img/logo.svg" width="60%" height="60%"/> 		<br/> 		
-			<p style="color:#515594; font-size:1.0em;"><a href="https://github.com/blabla1337/skf-flask" style="color:#515594; font-size:1.7em;">OWASP S.K.F.</a></p>  	 			<p><a href="https://gitter.im/Security-Knowledge-Framework/Lobby" rel="nofollow"> 				<img src="/img/badge.svg" alt="Join the chat at https://gitter.im/Security-Knowledge-Framework/Lobby" data-canonical-src="/static/img/badge.svg" style="max-width:100%;"></a> 			</p>  	
+			<p style="color:#515594; font-size:1.0em;"><a href="https://github.com/blabla1337/skf-flask" style="color:#515594; font-size:1.7em;">OWASP S.K.F.</a></p>  	 			<p><a href="https://gitter.im/Security-Knowledge-Framework/Lobby" rel="nofollow"> 				<img src="/img/badge.svg" alt="Join the chat at https://gitter.im/Security-Knowledge-Framework/Lobby" data-canonical-src="/img/badge.svg" style="max-width:100%;"></a> 			</p>  	
 		</center>
 	</div><!--/.sidebar-->
 		
