--- a/Auth-Bypass-simple/views/index.ejs
+++ b/Auth-Bypass-simple/views/index.ejs
@@ -64,8 +64,8 @@
 					<div class="panel-body">
 						<div class="col-md-6">
 							<form method="post" action="/login">
-							<input type="text" class="form-control" name="username" placeholder="username"/><br/>
-                			<input type="password" class="form-control" name="password" placeholder="password"/><br/>
+							<input type="text" class="form-control" name="username" placeholder="admin"/><br/>
+                			<input type="password" class="form-control" name="password" placeholder="admin"/><br/>
                			    <button class="btn btn-primary" type="submit">Submit Button</button>
                			</div>
 						</form>
