--- a/CMD4/views/index.ejs
+++ b/CMD4/views/index.ejs
@@ -6,9 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Live demonstrations</title>
 
-<link href="/static/css/bootstrap.min.css" rel="stylesheet">
-<link href="/static/css/datepicker3.css" rel="stylesheet">
-<link href="/static/css/styles.css" rel="stylesheet">
+<link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/datepicker3.css" rel="stylesheet">
+<link href="/css/styles.css" rel="stylesheet">
 <script src="/js/hints.js"></script>
 <!--Icons-->
 <script src="/js/lumino.glyphs.js"></script>
@@ -102,8 +102,8 @@
 	
 	</div><!--/.main-->
 
-	<script src="/static/js/jquery-1.11.1.min.js"></script>
-	<script src="/static/js/bootstrap.min.js"></script>
+	<script src="/js/jquery-1.11.1.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
 	<script>
 		!function ($) {
 			$(document).on("click","ul.nav li.parent > a > span.icon", function(){		  
